Fix quote spacing

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -7,7 +7,7 @@
     }
 
     & blockquote {
-        @apply my-12 ml-12 pl-12 text-2xl font-bold font-sans italic border-l-2 border-dotted border-gray-300;
+        @apply my-12 sm:ml-8 pl-8 text-2xl font-bold font-sans italic border-l-2 border-dotted border-gray-300;
     }
 
     & ul {
